Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-59748

MagmaKVStore: Fix incorrect status check when creating ByID iterator

    XMLWordPrintable

Details

    • Untriaged
    • 0
    • Unknown
    • KV 2023-4

    Description

      When creating a byID iterator with Magma, kv-engine is incorrectly checking the returned status. We're using status.OK() which is a static method and will always return a new OK status. Instead we should use the status we got.

      https://github.com/couchbase/kv_engine/blob/e586a8e4affc1474c123ef3ff20d8f422fbe0b63/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc#L2012

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            rohan.suri Rohan Suri
            rohan.suri Rohan Suri
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty