MB-59748 Fix status check in MagmaKVStore

At some places we were calling status.OK() which is a static method
which always returns a new OK status. We actually intend to check for
bad status.

Change-Id: I0c72de0ec98432bc355e0827e9b8d5f7a730c168
Reviewed-on: https://review.couchbase.org/c/kv_engine/+/201287
Tested-by: Build Bot <build@couchbase.com>
Reviewed-by: Jim Walker <jim@couchbase.com>